--- a/src/style/wordScramble.css
+++ b/src/style/wordScramble.css
@@ -279,7 +279,7 @@ body, input { font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gil
 
 @keyframes error {
 	0%, 100% { 
-		border-color:none; 
+		border-color:transparent; 
 		}
 	40%, 60% { 
 		border-color:#c72c1c; 
@@ -287,7 +287,7 @@ body, input { font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gil
 }
 @-webkit-keyframes error {
 	0%, 100% { 
-		border-color:none; 
+		border-color:transparent; 
 		}
 	40%, 60% { 
 		border-color:#c72c1c; 
@@ -296,7 +296,7 @@ body, input { font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gil
 
 @keyframes warning {
 	0%, 100% { 
-		border-color:none; 
+		border-color:transparent; 
 		}
 	40%, 60% { 
 		border-color:#ff9; 
@@ -304,7 +304,7 @@ body, input { font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gil
 }
 @-webkit-keyframes warning {
 	0%, 100% { 
-		border-color:none; 
+		border-color:transparent; 
 		}
 	40%, 60% { 
 		border-color:#ff9; 
@@ -313,7 +313,7 @@ body, input { font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gil
 
 @keyframes success {
 	0%, 100% { 
-		border-color:none; 
+		border-color:transparent; 
 		}
 	40%, 60% { 
 		border-color:#078e40; 
@@ -321,7 +321,7 @@ body, input { font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gil
 }
 @-webkit-keyframes success {
 	0%, 100% { 
-		border-color:none; 
+		border-color:transparent; 
 		}
 	40%, 60% { 
 		border-color:#078e40; 
