--- a/src/style/wordScramble.css
+++ b/src/style/wordScramble.css
@@ -299,7 +299,7 @@ body, input { font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gil
 		border-color:transparent; 
 		}
 	40%, 60% { 
-		border-color:#ff9; 
+		border-color:#e67e22; 
 		}
 }
 @-webkit-keyframes warning {
@@ -307,7 +307,7 @@ body, input { font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gil
 		border-color:transparent; 
 		}
 	40%, 60% { 
-		border-color:#ff9; 
+		border-color:#e67e22; 
 		}
 }
 
