--- a/src/style/wordScramble.css
+++ b/src/style/wordScramble.css
@@ -202,14 +202,12 @@ body, input { font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gil
 	}
 	#submitWord { 
 		outline:0; 
-
 		text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
 		background: #3498db;
 		border: 0;
 		border-bottom: 2px solid #2a8bcc;
 		cursor: pointer;
-		box-shadow: inset 0 -2px #2a8bcc;
-  
+		box-shadow: inset 0 -2px rgba(0,0,0,0.25);
 		padding:0.25em 0.5em; 
 		color:#eee; 
 		display:inline-block; 
@@ -221,6 +219,10 @@ body, input { font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gil
 		}
 	#submitWord:hover,
 	#submitWord:active { background:#197abb; border-color:#0165ba; color:#fff; }
+	#submitWord.busy {
+		background-color:#ccc;
+		border-color:#aaa;
+	}
 
 #previousWordsWrapper { 
 	display:none;
