--- a/src/style/wordScramble.css
+++ b/src/style/wordScramble.css
@@ -241,7 +241,7 @@ body, input {
 	border: 0;
 	border-bottom: 2px solid #2a8bcc;
 	cursor: pointer;
-	box-shadow: inset 0 -2px rgba(0,0,0,0.25);
+	box-shadow: inset 0 -2px #2a8bcc;
 	padding: 0.25em 0.5em;
 	color: #eee;
 	display: inline-block;
