--- a/src/font/fontello/css/fontello.css
+++ b/src/font/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?33660571');
-  src: url('../font/fontello.eot?33660571#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?33660571') format('woff'),
-       url('../font/fontello.ttf?33660571') format('truetype'),
-       url('../font/fontello.svg?33660571#fontello') format('svg');
+  src: url('../font/fontello.eot?35200745');
+  src: url('../font/fontello.eot?35200745#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?35200745') format('woff'),
+       url('../font/fontello.ttf?35200745') format('truetype'),
+       url('../font/fontello.svg?35200745#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?33660571#fontello') format('svg');
+    src: url('../font/fontello.svg?35200745#fontello') format('svg');
   }
 }
 */
@@ -51,3 +51,4 @@
 }
  
 .icon-menu:before { content: '\e800'; } /* '' */
+.icon-cancel:before { content: '\e801'; } /* '' */
