--- a/src/style/wordScramble.css
+++ b/src/style/wordScramble.css
@@ -1,6 +1,37 @@
 @media screen and (min-width: 1024px) {
-	body {
+	aside.drawer {
+		display:inline-block;
+		opacity: 1;
+		position: static;
+		box-shadow:0 0 4px -2px rgba(0,0,0,0.5);
+		flex-grow:1;
+	}
+	aside.drawer[data-slide-in-dir="right"],
+	aside.drawer[data-slide-in-dir="left"] {
+		transform: translateX(0);
+	}
+	aside#menu {
+		order: 1;
+	}
+	aside#gameSummary {
+		order: 3;
+	}
+	article#gameContainer {
+		position:static;
+		flex-grow:2;
 		font-size: 1.25em;
+		order: 2;
+	}
+	body {
+		display: flex;
+		flex-wrap: nowrap;
+		justify-content: center;
+	}
+	.toggle {
+		display: none;
+	}
+	#gameSummaryToggle { 
+		display: none;
 	}
 }
 
@@ -118,7 +149,6 @@ nav ul {
 }
 nav li {	
 	transition: background 0.5s;
-	padding: 0.2em 1em;
 }
 nav li:hover {
 	background-color:#f6f6f6;
@@ -128,6 +158,7 @@ nav li a {
 	line-height: 2.6em;
 	text-decoration: none;
 	color: #222;
+	padding: 0.2em 1em;
 }
 
 #gameHeader {
