--- a/src/style/wordScramble.css
+++ b/src/style/wordScramble.css
@@ -22,6 +22,9 @@
 		font-size: 1.25em;
 		order: 2;
 	}
+	article#gameContainer::before {
+		display: none;
+	}
 	body {
 		display: flex;
 		flex-wrap: nowrap;
