--- a/src/style/wordScramble.css
+++ b/src/style/wordScramble.css
@@ -16,6 +16,14 @@
 	aside#gameSummary {
 		order: 3;
 	}
+	body.status aside#status {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		z-index: 0;
+	}
 	article#gameContainer {
 		position:static;
 		flex-grow:2;
